--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,10 +4,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 
 body {
+    background-size: 1920px 2514px;
+    background: url("../../assets/images/bg.jpg") no-repeat top center;
     font-family: 'Raleway', 'Arial', sans-serif;
-    background: url("../../assets/images/bg-image-s1.jpg") no-repeat top center;
-    background-size: 1920px;
 }
+
 
 .wrapper {
     margin: 0 auto;
@@ -147,7 +148,7 @@ ul.nav {
     align-items: center;
     padding: 0 20px;
     height: 64px;
-    background: linear-gradient(90deg, rgba(246, 246, 246, 0) 1.47%, rgba(163, 210, 155, 0.92) 7.25%, #319F1C 14.68%, #309E1B 50.68%, #319F1C 84.33%, rgba(147, 202, 137, 0.79) 91.68%, rgba(246, 246, 246, 0) 99.05%);
+    background: linear-gradient(90deg, rgba(246, 246, 246, 0) 1.47%, rgba(163, 210, 155, 0.92) 7.25%, #319f1c 14.68%, #309E1B 50.68%, #319F1C 84.33%, rgba(147, 202, 137, 0.79) 91.68%, rgba(246, 246, 246, 0) 99.05%);
     border-radius: 3px;
     font-style: normal;
     font-weight: 500;
@@ -262,7 +263,6 @@ ul.nav {
 
 img.gift-big {
     position: relative;
-
     left: 720px;
     top: -300px;
 }
@@ -300,4 +300,62 @@ img.spatula {
 
 .sidebar ul a img {
     padding: 10px;
+}
+
+@media (max-width: 950px) {
+    .sidebar {
+        display: none;
+    }
+
+    img.gift-big {
+        display: none;
+    }
+
+    img.gift-small {
+        display: none;
+    }
+
+    img.spatula {
+        display: none;
+    }
+}
+
+
+/*todo main section.services*/
+
+
+.services h2 {
+    margin: 0 auto;
+    width: 238px;
+    height: 52px;
+    font-family: 'Montserrat', 'sans-serif';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 52px;
+    /* identical to box height, or 162% */
+    color: #363130;
+}
+
+.block-left {
+    float: left;
+    margin-top: 90px;
+}
+
+.block-left p {
+
+    margin: 20px 10px 20px 0;
+    width: 373px;
+    height: 42px;
+    border: 1px solid #319F1C;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+
+.block-left p img {
+    color: black;
+    stroke: black;
+    fill: black;
+    margin: 5px 20px;
+    vertical-align: middle;
 }
